# CoffeShop

./: .editorconfig  .gitignore  README.md
api/: Makefile  go.mod  go.sum  main.go  swagger.yaml
api/.metals/: metals.lock.db
api/handlers/: get.go  goodbye.go  hello.go  products.go
api/models/: product.go
currency/: Makefile  go.mod  go.sum  main.go
currency/protos/: currency.proto
currency/protos/currency/: currency.pb.go  currency_grpc.pb.go
currency/server/: currency.go
images/: .gitignore  Cargo.toml
images/imagestore/1/: file.txt
images/src/: handlers.rs  local.rs  main.rs  storage.rs
products/: .gitignore  pubspec.yaml
products/lib/models/: products.dart
products/lib/services/: products_service.dart
products/test/: products_test.dart
web/: package.json
web/src/: App.tsx
web/src/compoments/: CoffeList.tsx  Toaster.tsx  admin.tsx
