[package]
name = "images"
version = "0.1.0"
authors = ["Haizza1 <darioroman2001@gmail.com.>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.1"
sanitize-filename = "0.2"
actix-files = "0.5.0"
serde = "1.0.126"